--- a/src/admin/scss/modules/_table.scss
+++ b/src/admin/scss/modules/_table.scss
@@ -1,44 +1,52 @@
 .cpt-table {
-	width: 100%;
-	border-spacing: 5px;
-	text-align: left;
+  width: 100%;
+  border-spacing: 5px;
+  text-align: left;
 
-	&,
-	& th,
-	& td {
-		border: 1px solid #ccc;
-		border-collapse: collapse;
-		padding: 10px;
-	}
+  &,
+  & th,
+  & td {
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+    padding: 10px;
+  }
 
-	& th {
-		background-color: #f5f5f5;
-	}
+  & th {
+    background-color: #f5f5f5;
+  }
 
-	.btns{
-		width: 20%;
-	}
-	.small{
-		width: 10%;
-		text-transform: uppercase;
-		&.yes{
-			background-color:#008640;
-			color:#fff;
-		}
-		&.no{
-			background-color: #AE0202;
-			color:#fff;
-		}
-	}
-	.note{
-		width: 40%;
-	}
-	.name{
-		width: 20%;
-		font-weight: bold;
-	}
+  .btns {
+    display: flex;
+    justify-content: center;
+    .button {
+      font-size: 1.2em;
+      padding: 0.5em 1em;
+      height: unset;
+      font-weight: 700;
+      margin: 0 0.5em;
+    }
+  }
+  .small {
+    width: 10%;
+    text-transform: uppercase;
+    &.yes {
+      background-color: #008640;
+      color: #fff;
+    }
+    &.no {
+      background-color: #ae0202;
+      color: #fff;
+    }
+  }
+  .name {
+    width: 50%;
+    font-weight: bold;
+  }
+  td.name {
+    font-size: 1.5em;
+  }
 }
 
 .text-center {
-	text-align: center;
+  text-align: center;
 }
