--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -1,131 +1,2 @@
-body {
-  color: #404040;
-  font-family: 'Helvetica', Arial, sans-serif;
-  font-size: 18px;
-  line-height: 1.5; }
-
-* {
-  padding: 0;
-  margin: 0; }
-
-#react-topbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0; }
-
-.react-container {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  background-size: 5px 5px; }
-
-.top-bar {
-  position: relative;
-  display: flex;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
-  padding: .5em;
-  transition: background-color 100ms ease; }
-  .top-bar .header-text {
-    display: none; }
-    @media screen and (min-width: 480px) {
-      .top-bar .header-text {
-        display: flex;
-        cursor: default;
-        margin: 0 5px;
-        align-items: center; } }
-    .top-bar .header-text p {
-      color: #fff;
-      font-weight: 700;
-      text-transform: uppercase;
-      margin: 0;
-      margin-left: 0;
-      margin-right: 0;
-      margin-bottom: 0;
-      margin-top: 0; }
-  .top-bar .logo {
-    display: flex;
-    align-items: center;
-    opacity: 1;
-    background-size: cover;
-    transition: opacity .1s ease;
-    margin: 0 1em;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); }
-    .top-bar .logo:hover {
-      opacity: .7; }
-    .top-bar .logo .logo-svg {
-      width: 100%; }
-  .top-bar .select {
-    -webkit-appearance: button;
-    border-radius: 2px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-    user-select: none;
-    background-image: linear-gradient(#FAFAFA, #F4F4F4 40%, #E5E5E5);
-    border: 1px solid #AAA;
-    color: #555;
-    font-size: inherit;
-    overflow: hidden;
-    padding: 5px 10px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    height: unset; }
-    @media screen and (min-width: 480px) {
-      .top-bar .select {
-        width: 200px;
-        margin: 0 10px; } }
-  .top-bar .screen-wrapper {
-    display: flex;
-    align-items: center; }
-    .top-bar .screen-wrapper .btn-vieport-size {
-      display: none;
-      background-repeat: no-repeat;
-      background-color: transparent;
-      padding: 0; }
-      @media screen and (min-width: 480px) {
-        .top-bar .screen-wrapper .btn-vieport-size {
-          display: block;
-          opacity: .7;
-          cursor: pointer;
-          width: 25px;
-          height: 19px;
-          margin-left: 5px;
-          outline: none;
-          border: none;
-          transition: opacity .1s ease; }
-          .top-bar .screen-wrapper .btn-vieport-size:hover {
-            opacity: 1; } }
-      .top-bar .screen-wrapper .btn-vieport-size.desktop {
-        background-position: 0 0; }
-      .top-bar .screen-wrapper .btn-vieport-size.tablet-land {
-        background-position: -30px 0px; }
-      .top-bar .screen-wrapper .btn-vieport-size.tablet-port {
-        background-position: -59px 0px; }
-      .top-bar .screen-wrapper .btn-vieport-size.mob-land {
-        background-position: -87px 0px; }
-      .top-bar .screen-wrapper .btn-vieport-size.mob-port {
-        background-position: -117px 0px; }
-  .top-bar .social {
-    flex: 1;
-    white-space: nowrap;
-    overflow: hidden;
-    display: none;
-    align-items: center;
-    justify-content: flex-end; }
-    @media screen and (min-width: 768px) {
-      .top-bar .social {
-        display: flex; } }
-    .top-bar .social .SocialMediaShareButton {
-      margin-right: 1em;
-      cursor: pointer; }
-
-.container-iframe {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  margin: 0 auto; }
-  .container-iframe iframe {
-    flex: 1;
-    width: 100%;
-    height: 100%; }
+body{color:#404040;font-family:Helvetica,Arial,sans-serif;font-size:18px;line-height:1.5}*{padding:0;margin:0}#react-topbar{position:fixed;top:0;left:0;right:0;bottom:0}.react-container{height:100vh;width:100vw;display:flex;flex-direction:column;background-size:5px 5px}.top-bar{position:relative;display:flex;box-shadow:0 1px 2px rgba(0,0,0,.5);padding:.5em;transition:background-color .1s ease}.top-bar .header-text{display:none}@media screen and (min-width:480px){.top-bar .header-text{display:flex;cursor:default;margin:0 5px;align-items:center}}.top-bar .header-text p{color:#fff;font-weight:700;text-transform:uppercase;margin:0}.top-bar .logo{display:flex;align-items:center;opacity:1;background-size:cover;transition:opacity .1s ease;margin:0 1em;box-shadow:1px 1px 3px rgba(0,0,0,.5)}.top-bar .logo:hover{opacity:.7}.top-bar .logo .logo-svg{width:100%}.top-bar .select{-webkit-appearance:button;border-radius:2px;box-shadow:0 1px 3px rgba(0,0,0,.1);user-select:none;background-image:linear-gradient(#fafafa,#f4f4f4 40%,#e5e5e5);border:1px solid #aaa;color:#555;font-size:inherit;overflow:hidden;padding:5px 10px;text-overflow:ellipsis;white-space:nowrap;height:unset}@media screen and (min-width:480px){.top-bar .select{width:200px;margin:0 10px}}.top-bar .screen-wrapper{display:flex;align-items:center}.top-bar .screen-wrapper .btn-vieport-size{display:none;background-repeat:no-repeat;background-color:transparent;padding:0}@media screen and (min-width:480px){.top-bar .screen-wrapper .btn-vieport-size{display:block;opacity:.7;cursor:pointer;width:25px;height:19px;margin-left:5px;outline:none;border:none;transition:opacity .1s ease}.top-bar .screen-wrapper .btn-vieport-size:hover{opacity:1}}.top-bar .screen-wrapper .btn-vieport-size.desktop{background-position:0 0}.top-bar .screen-wrapper .btn-vieport-size.tablet-land{background-position:-30px 0}.top-bar .screen-wrapper .btn-vieport-size.tablet-port{background-position:-59px 0}.top-bar .screen-wrapper .btn-vieport-size.mob-land{background-position:-87px 0}.top-bar .screen-wrapper .btn-vieport-size.mob-port{background-position:-117px 0}.top-bar .social{flex:1;white-space:nowrap;overflow:hidden;display:none;align-items:center;justify-content:flex-end}@media screen and (min-width:768px){.top-bar .social{display:flex}}.top-bar .social .SocialMediaShareButton{margin-right:1em;cursor:pointer}.container-iframe{width:100%;height:100%;display:flex;margin:0 auto}.container-iframe iframe{flex:1;width:100%;height:100%}
+/*# sourceMappingURL=style.css.map*/
