--- a/skin/front/scss/base/_base.scss
+++ b/skin/front/scss/base/_base.scss
@@ -1,6 +1,6 @@
-body {
+body.mbwp-topbar {
     color: #404040;
-    font-family: 'Helvetica', Arial, sans-serif;
+    font-family: 'Montserrat', Arial, sans-serif;
     font-size: 18px;
     line-height: 1.5;
 }
