Wordpress 5.0 major update

--- a/skin/admin/scss/pages/_dashboard.scss
+++ b/skin/admin/scss/pages/_dashboard.scss
@@ -16,4 +16,10 @@
             margin-bottom:2em;
         }
     }
+
+    .developer {
+      width: 100%;
+      max-width: 200px;
+      padding: 10px;
+    }
 }
