--- a/skin/admin/scss/pages/_dashboard.scss
+++ b/skin/admin/scss/pages/_dashboard.scss
@@ -1,6 +1,8 @@
+$main-color: #0085BA;
+
 .wrap {
     h1 {
-        color: #0085BA;
+        color: $main-color;
         text-align: center;
         font-weight: 700;
         margin-bottom: 2em;
@@ -21,5 +23,39 @@
       width: 100%;
       max-width: 200px;
       padding: 10px;
+    }
+
+    .logo-image {
+      position: relative;
+      border: 1px solid $main-color;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      padding: 10px;
+      width: 100px;
+      height: 100px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-origin: content-box;
+
+      &.empty {
+        &::after {
+          content: 'Logo Goes Here';
+          position: absolute;
+          display: flex;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          color: $main-color;
+          justify-content: center;
+          align-items: center;
+          padding: 10px;
+          box-sizing: border-box;
+          text-align: center;
+          font-size: 20px;
+          font-weight: bold;
+        }
+      }
     }
 }
