--- a/skin/front/scss/home/_top-bar.scss
+++ b/skin/front/scss/home/_top-bar.scss
@@ -1,9 +1,12 @@
+$color-bg: #066486;
+
 .top-bar {
     position: relative;
     display: flex;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .5);
     padding: .5em;
     transition: background-color 100ms ease;
+    background-color: $color-bg;
     .header-text {
         display: none;
         @media screen and (min-width: $size_mobile) {
@@ -33,9 +36,14 @@
         &:hover {
             opacity: .7;
         }
-        .logo-svg {
-            width: 100%;
-        }
+    }
+
+    .mb-topbar-logo {
+      width: 40px;
+      height: 40px;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
     }
     @import "components/select";
     @import "components/screen-btns";
