--- a/skin/front/scss/base/_base.scss
+++ b/skin/front/scss/base/_base.scss
@@ -5,15 +5,16 @@ body.mbwp-topbar {
     line-height: 1.5;
 }
 
-* {
-    padding: 0;
-    margin: 0;
-}
-
-#react-topbar{
+#react-topbar {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+
+    select {
+      font-family: $font_family;
+      font-size: 18px;
+      line-height: 1.5;
+    }
 }
