--- a/skin/front/scss/home/_iframe.scss
+++ b/skin/front/scss/home/_iframe.scss
@@ -1,3 +1,9 @@
+$iframe-bg: #494D60;
+
+.react-container {
+  background-color: $iframe-bg;
+}
+
 .container-iframe {
     width: 100%;
     height: 100%;
