--- a/skin/front/scss/home/_top-bar.scss
+++ b/skin/front/scss/home/_top-bar.scss
@@ -1,4 +1,5 @@
-$color-bg: #066486;
+$color-bg: #333643;
+$menu-text: #E1E3E1;
 
 .top-bar {
     position: relative;
@@ -9,21 +10,14 @@ $color-bg: #066486;
     background-color: $color-bg;
     .header-text {
         display: none;
+        color: $menu-text;
+        font-weight: 700;
+        text-transform: uppercase;
         @media screen and (min-width: $size_mobile) {
             display: flex;
             cursor: default;
             margin: 0 5px;
             align-items: center;
-        }
-        p{
-            color: #fff;
-            font-weight: 700;
-            text-transform: uppercase;
-            margin:0;
-            margin-left:0;
-            margin-right:0;
-            margin-bottom:0;
-            margin-top:0;
         }
     }
     .logo {
@@ -44,22 +38,30 @@ $color-bg: #066486;
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-    @import "components/select";
     @import "components/screen-btns";
     .social {
-        flex: 1;
-        white-space: nowrap;
-        overflow: hidden;
-        display: none;
-        align-items: center;
-        justify-content: flex-end;
-        @media screen and (min-width: $size_tablet) {
-            display: flex;
-        }
-        .SocialMediaShareButton{
-            margin-right: 1em;
-            cursor: pointer;
-        }
+      flex: 1;
+      white-space: nowrap;
+      overflow: hidden;
+      display: none;
+      align-items: center;
+      justify-content: flex-end;
+      flex-wrap: wrap;
+      @media screen and (min-width: $size_tablet) {
+        display: flex;
+      }
+      .SocialMediaShareButton{
+        margin-right: 10px;
+        cursor: pointer;
+      }
+
+      .share-item {
+        border: 2px solid $menu-text;
+        border-radius: 50%;
+      }
     }
 }
