--- a/skin/front/scss/variables/_variables.scss
+++ b/skin/front/scss/variables/_variables.scss
@@ -1,4 +1,4 @@
-$font_family: 'Montserrat', Arial, sans-serif;
+$font_family: 'Raleway', Arial, sans-serif;
 $size_desktop: 1024px;
 $size_tablet: 768px;
 $size_mobile:480px;
